<resources>
    <string name="app_name">Local Storage</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up</string>
    <string name="create_an_account">Create an account</string>
    <string name="name">Name</string>
    <string name="school">School</string>
    <string name="sign_up">Sign up</string>
    <string name="user_details">User Details</string>
    <string name="logout">Logout</string>
    <string name="welcome">Welcome!</string>
    <string name="existing">Already have an account? Log in</string>
    <string name="create_account">Create account</string>
    <string name="image">image</string>
</resources>