<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="32dp"
    tools:context=".SignUpActivity">

    <TextView
        android:id="@+id/create"
        style="@style/Widget.LocalStorage.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/create_an_account" />
    
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_marginTop="50dp"
        android:layout_height="50dp"
        android:hint="@string/name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPersonName" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:hint="@string/email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/school"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:hint="@string/school">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/school_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

   <Button
       android:id="@+id/sign_up_button"
       android:layout_width="match_parent"
       android:layout_height="50dp"
       android:layout_marginTop="70dp"
       android:text="@string/sign_up"
       android:textSize="18sp"
       android:textAllCaps="false"/>

</LinearLayout>