<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/text_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.LocalStorage.TextView"
        android:text="@string/login"
        android:textSize="24sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_login"
        android:layout_marginTop="44dp"
        android:hint="@string/email"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress|textCapWords" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_input_email"
        android:layout_marginTop="4dp"
        android:hint="@string/password"
        app:endIconMode="password_toggle"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/buttonSignup"
        android:text="@string/login"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/buttonSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@android:color/transparent"
        android:text="@string/don_t_have_an_account_sign_up"
        android:textAllCaps="false"
        android:textColor="@android:color/darker_gray" />

</RelativeLayout>